add_objects_selectors

--- a/js_fundamentals_5_6/index.html
+++ b/js_fundamentals_5_6/index.html
@@ -11,40 +11,56 @@
     <h1>Bienvenidos a JS</h1>
 <!-- section>article*3>h2 -->
 <section>
-    <arcticle>
+    <article class="shield">
         <h2>Ejemplo 1</h2>
         <p id="resultado1"></p>
         <button id="boton1">Pulsa y calcularás</button>
-    </arcticle>
-    <arcticle>
+    </article>
+    <article>
         <h2>Ejemplo 2</h2>
         <p id="resultado2">Pasa por encima</p>
-    </arcticle>
-    <arcticle>
+    </article>
+    <article class="shield">
         <h2>Ejemplo 3</h2>
         <p id="resultado3">Pasa por encima (clase CSS)</p>
-    </arcticle>
+    </article>
     <!-- article*3>h2+p -->
     <article>
         <h2>Ejemplo 4 - getElementsByTagName </h2>
-        <div id="resultado4">
-
-
-
-        </div>
+        <div id="resultado4"></div>
         <button id="boton2">Pulsa</button>
     </article>
-    <article>
-        <h2></h2>
-        <p></p>
+    <article class="shield">
+        <h2>Ejemplo 5 - Objetos</h2>
+        <div id="resultado5"></div>
+        <button id="boton3">Pulsa</button>
     </article>
     <article>
-        <h2></h2>
-        <p></p>
+        <h2>Ejemplo 6 - Array de objetos</h2>
+        <div id="resultado6"></div>
+        <button id="boton4">Pulsa</button>
+    </article>
+
+    <article>
+        <h2>Ejemplo 7 - QuerySelector</h2>
+        <ul>
+            <li class="clase1"><a href="aaa">Link1</a></li>
+            <li class="clase2"><a href="bbb">Link2</a></li>
+            <li class="clase2"><a href="ccc">Link3</a></li>
+            <li class="clase1"><a href="ddd">Link4</a></li>
+            <li class="clase1"><a href="eee">Link5</a></li>
+        </ul>
+        <div id="miDiv">
+            <span id="miId5" class="miClase" title="cinco">A</span>
+            <span id="miId4" class="miClase" title="cuatro">B</span>
+            <span id="miId3" class="miClase" title="tres">C</span>
+            <span id="miId2" class="miClase" title="dos">D</span>
+            <span id="miId1" class="miClase" title="uno">E</span>
+        </div>
+
+
     </article>
 </section>
-
-
 
     <script src="./script.js"></script>
 </body>
